# carbodrone

./: Dockerfile  README.md  docker-compose.yaml  holybro_kakuteh7_default.px4
carbodrone_dualtech/: CMakeLists.txt  package.xml
carbodrone_dualtech/worlds/: dualtech.sdf
carbodrone_mars/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  package.xml
carbodrone_mars/launch/: real.launch.py  sim.launch.py
carbodrone_mars/src/: ball_detector.cpp  map_uploader.hpp  map_uploader.py  mission.cpp  mission_params.hpp  pickup.cpp  state_machine_node.hpp
carbodrone_mars/worlds/: mars.sdf
carbodrone_mavlink/: CMakeLists.txt  package.xml
carbodrone_px/: .dockerignore  CMakeLists.txt  Dockerfile  docker-compose.yaml  package.xml
carbodrone_px/config/: carto.lua  dds_topics.yaml
carbodrone_px/launch/: main.launch.py  real.launch.py  slam.launch.py
carbodrone_px/models/x500/: model.urdf
carbodrone_px/models/x500_depth/: model.sdf
carbodrone_px/rviz/: main.rviz
carbodrone_px/scripts/: camera_publisher.py  camera_reader.py  commander.py
carbodrone_px/src/: ground_pub.cpp  gz_depth.cpp  home_pub.cpp  imu.cpp  odom_publisher.cpp
carbodrone_px/worlds/: mars.sdf
carbodrone_sim/: CMakeLists.txt  package.xml
carbodrone_sim/models/OakD-Lite/: model.sdf
carbodrone_sim/models/x500_depth/: model.sdf
chwytak/: chwytak.py  chwytak_lgpio.py  close.py  open.py
docs/: 1. Install.md  2. Run.md
docs/3. Missions/Dual Tech/: Run.md
docs/3. Missions/Pola Marsjanskie/: Run.md
droniada-point-uploader/: example.json  key.json  main.py
image_publisher_py/: package.xml  setup.cfg  setup.py
image_publisher_py/image_publisher_py/: image_publisher_node.py
model/Tennis Ball Detection.v7i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
model/Tennis Ball Detection.v7i.yolov8/test/labels/: 20240408_152844_jpg.rf.cd488876ca992a039b4ddc56a5f38d49.txt  20240408_152847_jpg.rf.e4453723fd4b0608cd6e6fe20e331666.txt  20240408_153215_jpg.rf.6330c7bc8dd1222bf42bf779cb50df24.txt  20240408_153554_jpg.rf.ddf98f6ba49eb465bc9c86caec130ac7.txt  20240408_154021_jpg.rf.685f3b4fb5dcd306cb218e1d15b3737b.txt  20240408_154426_jpg.rf.575339308b496a1d6ed807264d3dcef2.txt
model/Tennis Ball Detection.v7i.yolov8/train/: labels.cache
model/Tennis Ball Detection.v7i.yolov8/train/labels/: 20240408_152824_jpg.rf.23b2b1408160f6aeed8d8491eef4facc.txt  20240408_152824_jpg.rf.2746acfc6190aa8e932c1849335ee52f.txt  20240408_152824_jpg.rf.99872a52b79a8806ed22d1ec66f526c6.txt  20240408_152826_jpg.rf.a6ba3ba1392d0a5273a2ab67058835ba.txt  20240408_152826_jpg.rf.c5155c86a2a23613eb280ac0d430dd33.txt  20240408_152826_jpg.rf.d888643fafa7441cd61fd3badae5a42e.txt  20240408_152850_jpg.rf.19aae7d725016c7eca07514606583d7b.txt  20240408_152850_jpg.rf.adf1a82ac580f0401e99d6045f956340.txt  20240408_152850_jpg.rf.b453d6ee716fd67fb9e0b8715ce76e31.txt  20240408_152852_jpg.rf.13a30d3871645dfcf93c5684663bb69a.txt  20240408_152852_jpg.rf.671cb96da7039eafa2686f2c9bf3383e.txt  20240408_152852_jpg.rf.94371f4d8916daee6f0f3b258ab9d818.txt  20240408_152857_jpg.rf.8f9c1ca67b227d382b643d9cc92e4fa8.txt  20240408_152857_jpg.rf.b3198f43c6226f650e219c748d0e6185.txt  20240408_152857_jpg.rf.b8389a329e8eeca87725db9fe4a74adc.txt  20240408_152901_jpg.rf.2b3c6b39a1b33447d84f40ccab852d63.txt  20240408_152901_jpg.rf.e0ba190a566697364094b89d0d1016ea.txt  20240408_152901_jpg.rf.f34226780a0bd6681cc3d81c39331850.txt  20240408_152915_jpg.rf.75bd32a79813eac80e5e8715aeb6b1eb.txt  20240408_152915_jpg.rf.765f93bb19235e590999e3d393fcc266.txt  20240408_152915_jpg.rf.de3e0772b6f39e26a187a4b29670f24e.txt  20240408_152921_jpg.rf.889013dd2e9efbb692a6c76b17d90c96.txt  20240408_152921_jpg.rf.a0e8a42d7c7b7812c09a0ee190de45d5.txt  20240408_152921_jpg.rf.d7ea4f57e66769f489ba2f8165c76764.txt  20240408_152935_jpg.rf.d8a8e1b708e90d761754692c299eed74.txt  20240408_152935_jpg.rf.e0d5dc2dc29316413c7f0f4ecdc3eb03.txt  20240408_152935_jpg.rf.f7c6b1efa522a46674a178560cfef591.txt  20240408_152945_jpg.rf.37f87b6c878a0806f34a70aa85f910ae.txt  20240408_152945_jpg.rf.c18ec2ebb82e2fdb15ac8fbcf9022e41.txt  20240408_152945_jpg.rf.d099528abb375aef374f710dc9782c0f.txt  20240408_153211_jpg.rf.0524795677d0391f219bc659e0b06747.txt  20240408_153211_jpg.rf.7ab353ee19e3d96db09ad98b7119beb9.txt  20240408_153211_jpg.rf.bda1e6f6bab554f3a63d8a5a6ec9b328.txt  20240408_153217_jpg.rf.4bedf1cc7c28d6e8798b172d6f30483b.txt  20240408_153217_jpg.rf.a82e4c3639689951cf6568afe19f37cd.txt  (+115 more)
model/Tennis Ball Detection.v7i.yolov8/valid/: labels.cache
(+17 files in other folders)
